# BANK-LEDGER-APP

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
bank_ledger_project/: manage.py
bank_ledger_project/api/: bank-ledger-9000.code-workspace  models.py  tests.py  urls.py  views.py
bank_ledger_project/api/migrations/: 0001_initial.py  0002_rename_destination_id_transferfunds_destination_and_more.py  0003_alter_transaction_other_bank_ip_and_more.py
bank_ledger_project/bank_ledger_app/: admin.py  apps.py  cron.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
bank_ledger_project/bank_ledger_app/migrations/: 0001_initial.py  0002_ledger_loan_id.py  0003_customer_user.py  0004_employee_user.py  0005_remove_employee_user.py  0006_employee_user.py  0007_alter_ledger_destination.py  0008_ledger_months.py  0009_merge_20230117_1620.py  0010_alter_ledger_origin.py
bank_ledger_project/bank_ledger_app/static/: main.css
bank_ledger_project/bank_ledger_project/: asgi.py  settings.py  urls.py  wsgi.py
bank_ledger_project/static/css/: header.css  login.css  main.css  table.css
bank_ledger_project/templates/: base.html
bank_ledger_project/templates/registration/: login.html
configs/bank-config/: bank-config.dockerfile  entrypoint.sh
configs/nginx/: nginx.conf  nginx.dockerfile
configs/transaction-broker/: transaction-broker.dockerfile
transaction-broker/: .env.example  main.py  pyproject.toml
transaction-broker/config/: secrets.py
transaction-broker/models/: objects.py
transaction-broker/utility/: functions.py
(+30 files in other folders)
